Fix z-index aside

--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 10000;
 }
 
 /* Burger menu
@@ -112,6 +112,7 @@
   background: #eee;
   color: #333;
   position: fixed;
+  z-index: 10000;
   padding: 59px 0;
   left: 0;
   top: 0;
